update test index

--- a/index-test.html
+++ b/index-test.html
@@ -125,14 +125,20 @@
 
 					<p>We bring together a diverse set of individuals – permanent faculty, contingent staff, independent scholars, students – through an intentional collaboration based on radical care that responds to the renewed call for racial and social justice.</p>
 
-					<aside class="mailing-list">
-						<p>Join our mailing list or contribute to the project.</p>
-						<a class="contribute" href="https://docs.google.com/forms/d/1QLFgCD9dUenIr4VcOXE-Yg8PlM20d277wfCHojRzYuQ/edit">Get involved</a>
-					</aside>
-
 					<p>Our project advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies.</p>
 						
-					<p>Please read our full <a href="http://localhost:8000/html/about/values_practices.html">Mission statement</a> to learn more about our work.</p>
+					<p>Read our <a href="/html/about/values_practices.html">mission statement</a> to learn more about our work.</p>
+				</section>
+
+				<section class="section-tiles" aria-labelledby="main-sections">
+					<h2 id="main-sections">Main Sections</h2>
+
+					<ul>
+						<li id="site-section-1"><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw" title="Zoomcasts"></i> Zoomcasts</span></a></li>
+						<li id="site-section-2"><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw" title="Lesson Plans"></i> Lesson Plans</span></a></li>
+						<li id="site-section-3"><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw" title="Syllabi"></i> Syllabi</span></a></li>
+						<li id="site-section-4"><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw" title="About"></i> About</span></a></li>
+					</ul>
 				</section>
 
 				<section class="founders" aria-labelledby="founders">
@@ -145,17 +151,11 @@
 					</ul>
 				</section>
 
-				<section class="section-tiles" aria-labelledby="main-sections">
-					<h2 id="main-sections">Main Sections</h2>
-
-					<ul>
-						<li id="site-section-1"><a href="/html/zoomcasts.html"><span><i class="fa fa-play-circle fa-fw" title="Zoomcasts"></i> Zoomcasts</span></a></li>
-						<li id="site-section-2"><a href="/html/lesson_plans.html"><span><i class="fa fa-book fa-fw" title="Lesson Plans"></i> Lesson Plans</span></a></li>
-						<li id="site-section-3"><a href="/html/syllabi.html"><span><i class="fa fa-pen fa-fw" title="Syllabi"></i> Syllabi</span></a></li>
-						<li id="site-section-4"><a href="/html/about.html"><span><i class="fa fa-info-circle fa-fw" title="About"></i> About</span></a></li>
-					</ul>
-
+				<section class="mailing-list">
+					<p>Join our mailing list or contribute to the project.</p>
+					<a class="contribute" href="https://docs.google.com/forms/d/1QLFgCD9dUenIr4VcOXE-Yg8PlM20d277wfCHojRzYuQ/edit">Get involved</a>
 				</section>
+
 
 				<!--<section aria-labelledby="mission">
 					<h2 id="mission">Mission Statement</h2>
