update biblio, values, and unsettling for coming soon

--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -68,7 +68,7 @@
 
 							<p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
 
-							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/unsettling_victorian.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/unsettling_victorian.docx"  title="This link opens a Word document.">Word</a></p>
+							<!-- <p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/unsettling_victorian.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/unsettling_victorian.docx"  title="This link opens a Word document.">Word</a></p> -->
 						</div>
 					</section>
 
@@ -88,12 +88,13 @@
 					<section aria-labelledby="overview">
 						<h3 id="overview">Syllabus Overview</h3>
 
-					
+						<p class="center">Coming Soon!</p>
 					</section>
 
 					<section aria-labelledby="works-cited">
 						<h3 id="works-cited">Works Cited</h3>
 
+						<p class="center">Coming Soon!</p>
 					</section>
 
 					<section aria-labelledby="series">
@@ -104,7 +105,8 @@
 
 					<section aria-labelledby="biography">
 						<h3 id="biography">Developer Biography</h3>
-						
+
+						<p class="center">Coming Soon!</p>
 					</section>
 
 					<section aria-labelledby="caption">
