--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -63,19 +63,30 @@
 					<section class="menu-container" aria-labelledby="menu">
 						<h3 id="menu">Menu</h3>
             <ol class="menu">
-              <li><a href="#primary">Primary Materials</a></li>
+              <li><a href="#introduction">Introduction</a></li>
+							<li><a href="#primary">Primary Materials</a></li>
 							<li><a href="#secondary">Secondary Materials</a></li>
 							<li><a href="#caption">Tile/Header Image Caption</a></li>
               <li><a href="#citation">Page Citation (MLA)</a></li>
             </ol>
           </section>
 
+					<section aria-labelledby="introduction">
+						<h3 id="introduction">Introduction</h3>
+
+						<p class="center">Coming Soon!</p>
+					</section>
+
 					<section aria-labelledby="primary">
 						<h3 id="primary">Primary Texts</h3>
+
+						<p class="center">Coming Soon!</p>
 					</section>
 
 					<section aria-labelledby="secondary">
 						<h3 id="secondary">Secondary Texts</h3>
+
+						<p class="center">Coming Soon!</p>
 					</section>
 
 					<section aria-labelledby="caption">
