--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -206,7 +206,7 @@
 
 							<p>---. <em>Sense of Place and Sense of Planet: The Environmental Imagination of the Global</em>. Oxford University Press, 2008.</p>
 
-							<p>MacDuffie, Allen, and Aubrey Plourde. “Introduction.” <em>Texas Studies in Literature and Language</em>, vol. 62, no. 2, 2020, pp. 123–27.</p>
+							<p>MacDuffie, Allen, and Aubrey Plourde. “Introduction.” <em>Texas Studies in Literature and Language</em>, vol. 62, no. 2, 2020, pp. 123–27. <em>Appears in special journal issue on “Victorian Environments.”</em></p>
 
 							<p>Miller, John. “Postcolonial Ecocriticism and Victorian Studies.” <em>Literature Compass</em>, vol. 9, no. 7, 2012, pp. 476–88.</p>
 
