--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -281,7 +281,7 @@
 
 								<p>Bennett-Coverley, Louise. “<a href="https://www.best-poems.net/louise-bennett-coverley/colonization-in-reverse.html">Colonization in Reverse</a>.” <em>Best Poems</em>, 1966.</p>
 
-								<p>McKay, Claude. <a href="https://scalar.lehigh.edu/mckay/songs-of-jamaica-1912"><em>Songs of Jamaica</em></a>. Edited by Amardeep Singh, A Digital Collection, Lehigh University, 1912.</p>
+								<p>McKay, Claude. “Quashie and Buccra.” <a href="https://scalar.lehigh.edu/mckay/quashie-to-buccra-1?path=songs-of-jamaica-1912">Songs of Jamaica</a>, edited by Amardeep Singh, A Digital Collection, Lehigh University, 1912.</p>
 							</section>
 
 							<section aria-labelledby="secondary-5">
