--- a/index-test.html
+++ b/index-test.html
@@ -32,7 +32,8 @@
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>
 		<style>
-			main section:first-child {
+			/* B&W tiles */
+			/* main section:first-child {
 				margin-top: 0;
 			}
 			.founders ul{
@@ -81,9 +82,7 @@
 			.section-tiles li a:visited{
 				font-size: .95em;
 				text-decoration: none;
-				/* font-weight: 600; */
 				color: #242424;
-				/* color: #fff; */
 				width: 100%;
 				height: 100%;
 				display: flex;
@@ -96,7 +95,32 @@
 			.section-tiles li:focus-within a{
 				color: white;
 				background: #395375;
+			} */
+
+			/* Colored tiles */
+			/* .section-tiles li#site-section-1{
+				background: #cb6948;
 			}
+			.section-tiles li#site-section-2{
+				background: #5378ac;
+			}
+			.section-tiles li#site-section-3{
+				background: #728a61;
+			}
+			.section-tiles li#site-section-4{
+				background: #757575;
+			}
+			.section-tiles li:hover {
+				color: #fff;
+			}
+			.section-tiles li#site-section-1:hover,
+			.section-tiles li#site-section-2:hover,
+			.section-tiles li#site-section-3:hover,
+			.section-tiles li#site-section-4:hover{
+				background: #395375;
+			} */
+			
+			/* B&W standalone tiles */
 			/* .section-tiles ul{
 				text-align: center;
 				list-style: none;
@@ -121,8 +145,15 @@
 				color: black;
 				text-decoration: none;
 			} */
-			/* .section-tiles ul{
+
+			/* Mobile & hover/focus */
+			/* Big tiles pt 1 */
+			.section-tiles{
+				margin-bottom: 2em;
+			}
+			.section-tiles ul{
 				list-style: none;
+				margin: 0 auto;
 				padding: 0;
 				display: flex;
 				justify-content: space-evenly;
@@ -173,32 +204,10 @@
 				transform: translate(-50%, -50%);
 				-moz-transform: translate(-50%, -50%);
 				-webkit-transform: translate(-50%, -50%);
-			}*/
-			/* #site-section-1{
-				background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
-			} */
-			/* .section-tiles li#site-section-1{
-				background: #cb6948;
 			}
-			.section-tiles li#site-section-2{
-				background: #5378ac;
-			}
-			.section-tiles li#site-section-3{
-				background: #728a61;
-			}
-			.section-tiles li#site-section-4{
-				background: #757575;
-			}
-			.section-tiles li:hover {
-				color: #fff;
-			}
-			.section-tiles li#site-section-1:hover,
-			.section-tiles li#site-section-2:hover,
-			.section-tiles li#site-section-3:hover,
-			.section-tiles li#site-section-4:hover{
-				background: #395375;
-			} */
-			/* #site-section-1{
+
+			/* Big tiles pt 2 */
+			#site-section-1{
 				background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
 			}
 			#site-section-1 a span{
@@ -221,7 +230,7 @@
 			}
 			#site-section-4 a span{
 				background: #757575;
-			} */
+			}
 		</style>
 	</head>
 
