--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -78,13 +78,13 @@
 					</section>
 
 					<section aria-labelledby="primary">
-						<h3 id="primary">Primary Texts</h3>
+						<h3 id="primary">Primary Materials</h3>
 
 						<p class="center">Coming Soon!</p>
 					</section>
 
 					<section aria-labelledby="secondary">
-						<h3 id="secondary">Secondary Texts</h3>
+						<h3 id="secondary">Secondary Materials</h3>
 
 						<p class="center">Coming Soon!</p>
 					</section>
