--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -56,23 +56,26 @@
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
-					<section aria-labelledby="overview">
-						<h3 id="overview">Overview</h3>
-
-						<p class="center">Coming soon!</p>
-					</section>
-
-					<!-- <section aria-labelledby="mission">
+					<section aria-labelledby="mission">
 						<h3 id="mission">Mission Statement</h3>
 
 						<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
+
 						<ol class="mission">
 							<li>foster the application of innovative, interdisciplinary teaching approaches to Victorian-era literatures and cultural objects of all kinds, and</li>
 							<li>introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom.</li>
 						</ol>
-						<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016).  This commitment not only informs our content but shapes how we relate to one another in our processes of creation and collaboration.</p> 
+
+						<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016).  This commitment not only informs our content but shapes how we relate to one another in our processes of creation and collaboration.</p>
+
 						<p>By elevating BIPOC, contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need.  Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
-					</section> -->
+					</section>
+
+					<section aria-labelledby="code">
+						<h3 id="code">Code of Conduct</h3>
+
+						<p class="center">Coming soon!</p>
+					</section>
 
 					<section aria-labelledby="caption">
 						<h3 id="caption">Tile/Header Image Caption</h3>
