--- a/0_dev/page-templates/0_lesson-plan-template-africa.html
+++ b/0_dev/page-templates/0_lesson-plan-template-africa.html
@@ -133,7 +133,7 @@
 
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>, lesson plan dev. “.” Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
 					</section>
