--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -83,7 +83,7 @@
 						<p>Owen Jones. “Indian No. 6.” <em><a href="https://archive.org/details/grammarornament00Jone">The Grammar of Ornament</a></em>, Day and Son, Lithographers to the Queen, 1856, Plate LIV. Public domain. The founding developers of <em>Undisciplining the Victorian Classroom</em> have selected this image and the others that illustrate the pages of the About section because the images convey two dynamics.  First, the images show the ways that the British in the Victorian period were engaged in the process of collecting and taxonomizing materials from other parts of the world. Second, the images themselves also illustrate how the graphic designs from these non-British and, often, non-Western cultures stand as striking aesthetic achievements in their own right.</p>
 					</section>
 					
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>“Values and Practices.” <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/about/values_practices.html" class="cite-link">https://undiscipliningvc.org/html/about/values_practices.html</a>.</p>
 					</section>
