--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -195,7 +195,7 @@
 						<p>Joseph Mallord William Turner. <a href="https://collections.mfa.org/objects/31102">Slave Ship (Slavers Throwing Overboard the Dead and Dying, Typhoon Coming On)</a>. 1840. The Beal Gallery (Gallery 251), 99.22. Public domain.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Sophia Hsu, lesson plan dev. “Archival Erasure and the Aftermath of Slavery.” Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_archival_erasure.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_archival_erasure.html</a>.</p>
 					</section>
