--- a/html/lesson_plans/africa_colonial_landscapes.html
+++ b/html/lesson_plans/africa_colonial_landscapes.html
@@ -230,7 +230,7 @@
 						<p>Anonymous. “<a href="https://archive.org/details/b21356853/page/n5/mode/2up">Bird’s-Eye View of the Great Cataracts of the Zambesi (Called Mosioatunya, or Victoria Falls) and of the Zigzag Chasm below the Falls through Which the River Escapes</a>.” <em>Narrative of an Expedition to the Zambesi and Its Tributaries and of the Discovery of the Lakes Shirwa and Nyassa, 1858-1864</em>, by David Livingstone and Charles Livingstone, John Murray, 1865, frontispiece. Public domain.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Ji Eun Lee, lesson plan dev. “Colonial Landscapes and Travel Narratives.” Carolyn Betensky, Melissa Free, Cherrie Kwok, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_colonial_landscapes.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_colonial_landscapes.html</a>.</p>
 					</section>
