--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -152,7 +152,7 @@
 						<p><a href="https://www.loc.gov/pictures/item/93505644/">Baptism by John Chilembwe in Liberia or Malawi</a>. ca. 1900-1915. Library of Congress Prints and Photographs Division. No known restrictions on publication.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Melissa Free, lesson plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_ethiopianism.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_ethiopianism.html</a>.</p>
 					</section>
