--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -195,7 +195,7 @@
 						<p>Anonymous. Map of Southern Africa. <em>South Africa and How to Reach It by the Castle Line</em>, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain. In describing southern Africa as “South Africa” when not referring specifically to the Union of South Africa (formed in 1910), the British elided the region’s indigenous territories and (for most of the nineteenth century) Boer republics.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Melissa Free, lesson plan dev. “Southern Africa, 1820-1930.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/africa_southern_africa.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/africa_southern_africa.html</a>.</p>
 					</section>
