--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -113,7 +113,7 @@
 						<p>Anonymous. <a href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Kingston from Harbor</a>. 1891. Public domain. Image courtesy of Monvisions.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page Citation (MLA)</h3>
 						<p>Adrian S. Wisnicki, Kira Braham, Heidi Kaufman, Indu Ohri, and Breanna Simpson. “Mary Seacole and the Caribbean.”  <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_caribbean_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_caribbean_introduction.html</a>.</p>
 					</section>
