--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -218,7 +218,7 @@
 						<p>Anonymous. <a href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Jubilee Market, Kingston, Jamaica</a>. ca. 1890s. Public domain. Image courtesy of Monvisions.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Kira Braham, lesson plan dev. “Decentering Britishness.” Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_decentering_britishness.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_decentering_britishness.html</a>.</p>
 					</section>
