--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -254,7 +254,7 @@
             <p>(Right) Anonymous. <a href="https://www.loc.gov/pictures/item/2003653538/">Susie King Taylor</a>. 1902. Library of Congress, General Collections. Public domain. This photograph serves as the frontispiece of Susie King Taylor’s autobiography <em>Reminiscences of My Life in Camp with the 33rd United States Colored Troops, Late 1st S.C. Volunteers</em>. Her autobiography documents her service as a nurse, laundress, and teacher with the 33rd United States Colored Troops Infantry Regiment during the American Civil War. King’s photograph conveys her strength and resilience as the first African American woman to open a school for freed slaves in Georgia and the only one to publish an autobiography about her Civil War experiences.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Indu Ohri, lesson plan dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_recentering_nursing.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
 					</section>
