--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -255,7 +255,7 @@
 						<p>Cram, George Franklin. “<a href="https://legacy.lib.utexas.edu/maps/historical/jamaica_1901.jpg">Map of the Island of Jamaica</a>.” Cram’s Modern Atlas, by George Franklin Cram, 1901. Public domain.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
 						<p>Heidi Kaufman, lesson plan dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/lesson_plans/seacole_undisciplining_autobiography.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/seacole_undisciplining_autobiography.html</a>.</p>
 					</section>
