--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -143,7 +143,7 @@
 						<p>Anonymous. “<a href="https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney">In the Ayah’s Home (Hackney)</a>.” <em>Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes</em>, edited by G. R. Sims, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12.. Public domain.</p>
 					</section>
 					
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Priyanka Anne Jacob, dev. “Reintroducing the Victorians.” Elaine Freedgood, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/reintroducing_victorians.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/reintroducing_victorians.html</a>.</p>
 					</section>
