--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -115,7 +115,7 @@
 						<p>Anonymous. <a href="https://digital.lib.sfu.ca/pfp-22097/msc130-1106701">The Lions and Brockton Point, Stanley Park</a>. n.d. Simon Frazer University Digitized Collections, MSC130-11067.</p>
 					</section>
 					
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Syllabus Citation (MLA)</h3>
 						<p>Margaret Linley, dev. “Unsettling Victorian Literature.” Elaine Freedgood, peer rev.; Sophia Hsu, syllabus cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/syllabi/unsettling_victorian.html" class="cite-link">https://undiscipliningvc.org/html/syllabi/unsettling_victorian.html</a>.</p>
 					</section>
