--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -99,7 +99,7 @@
 						<p>Zarena Aslami is Associate Professor in the Department of English at Michigan Start University. She is the author of <em>The Dream Life of Citizens: Late Victorian Novels and the Fantasy of the State</em> and is currently working on a book project that examines nineteenth-century British representations of Afghanistan. </p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with Zarena Aslami.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/aslami.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/aslami.html</a>.</p>
 					</section>
