--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -99,7 +99,7 @@
 						<p>Dr. Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia, is a former collective member of <em>off our backs: a women’s newsjournal.</em> The author of <em>Political Poetess: Victorian Femininity, Race, and the Legacy of Separate Spheres (Princeton, </em>2017) as well as of <em>Lost Saints</em> (University Press of Virginia, 1996), Lootens first started publishing and teaching on connections between Victorian poetry and the Black Atlantic in the 1990s. More recently, her “Looking Beyond [and Before] <em>Ancient Ballads</em>: Toru Dutt’s <em>Sheaf </em>and the Force of Abolition Time” in <em>Victorian Studies</em>, 2019 speaks to one aspect of linking Victorian, Transatlantic, and transimperial poetic studies; her 2011 Longman Cultural Edition of Rudyard Kipling's <em>Kim, </em>co-edited with Paula M. Krebs represents another.</p>
 					</section>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with Tricia Lootens.” Hosted by Pearl Chaozon Bauer. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="/html/zoomcasts/lootens.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/lootens.html</a>.</p>
 					</section>
