--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -116,7 +116,7 @@
 						<p>Scott, Kim. <em>Taboo</em>. Small Beer Press, 2019.</p>
 					</summary>
 
-					<section aria-labelledby="citation">
+					<section class="smaller" aria-labelledby="citation">
 						<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 						<p>“Zoomcast with Jason Rudy.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/rudy.html" class="cite-link">https://undiscipliningvc.org/html/zoomcasts/rudy.html</a>.</p>
 					</section>
