--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -57,7 +57,7 @@
 					</div>
 
 					<section aria-labelledby="mission">
-						<h3 id="mission">Mission Statement</h3>
+						<h3 id="mission">Our Mission</h3>
 
 						<p><em>Undisciplining the Victorian Classroom</em> is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens and advocates for engaging scholarship from Black and African, Indigenous and Native American, Asian and Asian American, Latinx, Postcolonial, Decolonial, Feminist, Queer, Transgender, Disability, and Critical Ethnic Studies. The project seeks to:</p>
 
@@ -71,8 +71,26 @@
 						<p>By elevating BIPOC, contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need.  Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
 					</section>
 
-					<section aria-labelledby="code">
-						<h3 id="code">Code of Conduct</h3>
+					<section aria-labelledby="practice">
+						<h3 id="practice">Our Mission In Practice</h3>
+
+						<p class="center">Coming soon!</p>
+					</section>
+
+					<section aria-labelledby="collaboration">
+						<h3 id="collaboration">Centering Collaboration</h3>
+
+						<p class="center">Coming soon!</p>
+					</section>
+
+					<section aria-labelledby="review">
+						<h3 id="review">Open Peer Review</h3>
+
+						<p class="center">Coming soon!</p>
+					</section>
+
+					<section aria-labelledby="terminology">
+						<h3 id="terminology">Terminology</h3>
 
 						<p class="center">Coming soon!</p>
 					</section>
