--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -56,6 +56,25 @@
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
+					<section aria-labelledby="overview">
+						<h3 id="overview">Overview</h3>
+
+						<p class="center">Coming soon!</p>
+					</section>
+
+					<section class="menu-container" aria-labelledby="menu">
+						<h3 id="menu">Menu</h3>
+            <ol class="menu">
+							<li><a href="#mission">Our Mission</a></li>
+							<li><a href="#practice">Our Mission in Practice</a></li>
+							<li><a href="#collaboration">Centering Collaboration</a></li>
+							<li><a href="#review">Open Peer Review</a></li>
+							<li><a href="#terminology">Terminology</a></li>
+							<li><a href="#caption">Tile/Header Image Caption</a></li>
+              <li><a href="#citation">Page Citation (MLA)</a></li>
+            </ol>
+          </section>
+
 					<section aria-labelledby="mission">
 						<h3 id="mission">Our Mission</h3>
 
