--- a/html/about/values_practices.html
+++ b/html/about/values_practices.html
@@ -59,7 +59,7 @@
 					<section aria-labelledby="overview">
 						<h3 id="overview">Overview</h3>
 
-						<p class="center">Coming soon!</p>
+						<p>This page describes the principles that guide <em>Undisciplining the Victorian Classroom</em> as a whole and determine its processes as a digital project that collaborates with individuals and institutions around the world.</p>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
@@ -67,7 +67,7 @@
             <ol class="menu">
 							<li><a href="#mission">Our Mission</a></li>
 							<li><a href="#practice">Our Mission in Practice</a></li>
-							<li><a href="#collaboration">Centering Collaboration</a></li>
+							<li><a href="#collaboration">Centering Collaboration and Care</a></li>
 							<li><a href="#review">Open Peer Review</a></li>
 							<li><a href="#terminology">Terminology</a></li>
 							<li><a href="#caption">Tile/Header Image Caption</a></li>
@@ -85,33 +85,39 @@
 							<li>introduce less-studied, global, Victorian-era writers, artists, and communities into the classroom.</li>
 						</ol>
 
-						<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016).  This commitment not only informs our content but shapes how we relate to one another in our processes of creation and collaboration.</p>
+						<p>In taking this approach, the project works in solidarity with the critical intervention made by “<a href="https://lareviewofbooks.org/article/undisciplining-victorian-studies/">Undisciplining Victorian Studies</a>” (Chatterjee, Christoff, Wong 2020) and Christina Sharpe’s call for scholars to “become undisciplined” as a way to undo the racist epistemologies that scholars have inherited, unknowingly or not, from their predecessors (<em>In the Wake: On Blackness and Being</em>, 2016). This commitment not only informs our content but shapes how we relate to one another in our processes of creation and collaboration.</p>
 
-						<p>By elevating BIPOC, contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need.  Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
+						<p>By elevating BIPOC, contingent, and other vulnerably-positioned scholars, we seek to build a community based on radical care, which works to remove the structural impediments that prevent scholars, students, and the humanities from receiving the kinds of support and sustenance they so desperately need. Ultimately, the project hopes to inspire new modes of teaching and model alternative forms of scholarly engagement that disrupt white privilege, Anglocentric ways of knowing, and established lines of academic hierarchy in Victorian Studies.</p>
 					</section>
 
 					<section aria-labelledby="practice">
 						<h3 id="practice">Our Mission In Practice</h3>
 
-						<p class="center">Coming soon!</p>
+						<p>Below is an elaboration of how we strive to enact our mission and put it into practice. These values articulated in the statement above undergird all our processes for curating our content, for working together, and for deciding how concepts and information will be presented. <em>Undisciplining the Victorian Classroom</em> is dedicated to researching and implementing practices that will best support our mission and the values of antiracism. We are always open to learning from feedback and bringing the site into better alignment with our values.</p>
 					</section>
 
 					<section aria-labelledby="collaboration">
-						<h3 id="collaboration">Centering Collaboration</h3>
+						<h3 id="collaboration">Centering Collaboration and Care</h3>
 
-						<p class="center">Coming soon!</p>
+						<p>In every decision we make, we engage in a process of detailed and reflective conversation and make every effort to build consensus, building a collaborative model of community based on care. As a form of knowledge building that seeks to destabilize central authority, collaboration has been the best approach for imagining antiracist possibilities for our field, particularly at a time when universities run on the labor of undervalued scholars and contingent faculty who are rendered disposable. By centering dialogue and coalition-building in our process, we are working to build a broad community that celebrates different forms of interdisciplinary expertise and provides care and support for each person involved in the project.</p>
+
+						<p>We also understand that structural vulnerabilities are not distributed equally across all of our collaborators. This project seeks to work against the division of educators by institutions, disciplines, and ranks and to build a scholarly community that prioritizes experiential expertise and values the underrepresented perspectives of our field’s most neglected and overworked members: graduate student employees; part-time faculty; full-time, non-tenure-track faculty; and untenured faculty – all of whom can be rendered even more precarious by inequalities around race, ethnicity, gender, sexuality, ability, and citizenship status. We recognize that our efforts to live up to these principles will require ongoing work and reflection, as we work to undo long histories of inequality and oppression.</p>
 					</section>
 
 					<section aria-labelledby="review">
 						<h3 id="review">Open Peer Review</h3>
 
-						<p class="center">Coming soon!</p>
+						<p>The peer review process has long played a pivotal role in scholarly publishing, since it provides mechanisms for verifying academic work, helps to improve the quality of published research, and increases networking possibilities within research communities.</p>
+
+						<p>At <em>Undisciplining the Victorian Classroom</em>, we have purposefully chosen a form of peer review that is collaborative and open by design. While we still value and rely on various forms of expertise, our process is expressly designed to break the problematic mold of blind peer review which, despite its seemingly neutral nature, often perpetuates structures of academic elitism, particularly when it gets weaponized via gatekeeping. In our open peer review process, we name everyone involved in order to give them credit for their labor and to offer them appropriate recognition. More importantly, everybody understands that the review process is in place to help collectively engage in the process of improving and strengthening our work, for the good of our entire community.</p>
+
+						<p>In this regard, our form of open peer review is part of the critical intervention of the project, and we take it as seriously and see it as legitimate as any other professional aspect of the project.</p>
 					</section>
 
 					<section aria-labelledby="terminology">
 						<h3 id="terminology">Terminology</h3>
 
-						<p class="center">Coming soon!</p>
+						<p><em>Undisciplining the Victorian Classroom</em> makes every effort to use terms and typographic practices that align with the principles of antiracism. We also understand that these practices are under active debate and undergo shifts for important reasons. With that in mind, we are committed to following the guidance and expertise of BIPOC scholars and activists, as a form of citational and scholarly solidarity. We also recognize that when talking about nineteenth century contexts, terminologies can be complex and different from the ways that they are used in present discourses. We strive to always be sensitive to those histories, while also simultaneously understanding the urgency of responding to the circumstances of our present moment. As always, we are dedicated to learning, improving, and revising our practices as it becomes necessary.</p>
 					</section>
 
 					<section aria-labelledby="caption">
