update for contact

--- a/common/nav.html
+++ b/common/nav.html
@@ -17,7 +17,7 @@
 
 					<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true" title="About"></i> <span id="about">About</span></a></li>
 
-					<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true" title="Email"></i> <span>Email</span></a></li>
+					<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></li>
 
 					<li role="none"><button title="Menu" aria-label="Show site sections" onclick="openSlideMenu()" tabindex="0" id="regular-button"><i class="fa fa-bars"></i></button></li>
 				</ul>
@@ -38,7 +38,7 @@
 		
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/html/about.html"><i class="fa fa-info-circle fa-fw" aria-hidden="true" title="About"></i> <span>About</span></a></li>
 
-							<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true" title="Email"></i> <span>Email</span></a></li>
+							<li role="none"><a role="menuitem" aria-haspopup="false" href="mailto:chaozonbauer@gmail.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-fw" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></li>
 
 							<li role="none"><a role="menuitem" aria-haspopup="false" href="/sitemap.html"><i class="fa fa-directions fa-fw" aria-hidden="true" title="Site Map"></i> <span>Site Map</span></a></li>
 						</ul>
