--- a/common/footer.html
+++ b/common/footer.html
@@ -1,6 +1,10 @@
 <footer id="footer">
   <p>
-    <span class="site-detail">&#169; 2020-2021, <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a></span>
+    <span class="site-detail">First edition, 2021</span>
+
+    <span class="site-detail">Project launch, 2020</span>
+
+    <span class="site-detail"><a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a></span>
     
     <span class="site-detail">Host: <a href="https://github.com/undiscipliningvc">GitHub</a></span>
     
