--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 										<img src="/img/home/uvc_0004-1200px.jpg" srcset="/img/home/uvc_0004-1200px.jpg 1200w, /img/home/uvc_0004-1050px.jpg 1050w, /img/home/uvc_0004-900px.jpg 900w, /img/home/uvc_0004-750px.jpg 750w, /img/home/uvc_0004-600px.jpg 600w, /img/home/uvc_0004-450px.jpg 450w, /img/home/uvc_0004-300px.jpg 300w" sizes="(min-width: 1340px) 898px, (min-width: 1040px) calc(51.43vw + 219px), (min-width: 780px) calc(17.08vw + 565px), (min-width: 340px) calc(89.52vw + 18px), calc(515vw - 1346px)" alt="Silhouettes of trees with birds and two individuals with weapons drawn in an attack pose."/>
 								</div>
 								<div class="carousel-caption">
-									<p><a href="#mcrae" id="carousel-label-3">Tommy McRae, Untitled Illustration, 1896</a></p>
+									<p><a href="#mcrae" id="carousel-label-3">Tommy McRae, Hunting Scene, 1896</a></p>
 								</div>
 							</div>	
 							<div class="carousel-item" role="group" aria-roledescription="slide" aria-label="4 of 4">
@@ -164,13 +164,13 @@
 					<h2 id="image-details">Carousel Image Details</h2>
 
 						<!-- <h3>Slideshow</h3> -->
-						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>,” detail. Black ink, watercolor, and tin paint on paper. Calcutta, India, 1800s. Indian Art, Indian and Southeast Asian Art. Cleveland Museum of Art. CC0 “No Rights Reserved.”</p>
+						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>.” Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
 
-						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “Earl’s Court Station.” <a href="https://archive.org/details/japaneseartistin00markuoft/page/n7/mode/2up">A Japanese Artist in London</a>, by Yoshio Markino, Chatto & Windus, 1910, p. 196. Public domain image.</p>
+						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, by Yoshio Markino, Chatto & Windus, 1910, p. 196. Public domain image.</p>
 
-						<p id="mcrae"><em>Slide #3</em>: Tommy McRae. Untitled Illustration. <a href="https://archive.org/details/cu31924029909060/page/n5/mode/2up">Australian Legendary Tales</a>, edited & translated by K. Langloh Parker, David Nutt; Melville, Mullen & Slade, 1896, p. 114. Public domain image.</p>		
+						<p id="mcrae"><em>Slide #3</em>: Tommy McRae. Hunting Scene. <a href="https://archive.org/details/cu31924029909060/page/n5/mode/2up">Australian Legendary Tales</a>, by Unnamed Yuwaalaraay Informants, edited & translated by K. Langloh Parker, David Nutt; Melville, Mullen & Slade, 1896, p. 114,  Public domain image.</p>		
 						
-						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>.” Cloth, dye. Ghana, c.1910. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
+						<p id="fante"><em>Slide #4</em>: Anonymous Fante Artist. “<a href="https://africa.si.edu/collections/objects/8622/asafo-flag?ctx=b6e777daaaa95af79cf9d1b5e407048a470c2f95&idx=8">Asafo Flag</a>,” c.1910. Smithsonian Institution. National Museum of African Art, Textile and Fiber Arts, 88-9-1. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act.</p>
 				</section>
 
 				<section class="smaller" aria-labelledby="citation">
