update decol health

--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -79,9 +79,9 @@
               <li><a href="#outcomes">Learning Outcomes</a></li>
               <li><a href="#pathways">Pathways (with Corresponding Texts)</a>
                 <ol>
-                  <li><a href="#pathway-1">Seacole and Medicine: History and Practice</a></li>
+                  <li><a href="#pathway-1">Seacole and Medicine: History and Pedagogy</a></li>
                   <li><a href="#pathway-2">Contagion and Positionality: Disease, Race, and Seacole</a></li>
-                  <li><a href="#pathway-3">Seacole’s Care Work: Identity, Context, Experience</a></li>
+                  <li><a href="#pathway-3">Seacole’s Care Work: Identity, Context, Practice</a></li>
                 </ol>
               </li>
               <li><a href="#topics">Related Contemporary Topics</a></li>
@@ -110,7 +110,7 @@
 						<h3 id="pathways">Pathways (with Corresponding Texts)</h3>
 
             <section aria-labelledby="pathway-1">
-              <h4 id="pathway-1">Seacole and Medicine: History and Practice</h4>
+              <h4 id="pathway-1">Seacole and Medicine: History and Pedagogy</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anionwu 2012; Chang 2017; Dellasega et al. 2007; Gilbert 2012; Howell 2010; Jackson and Gracia 2014; Kelsey 2018; Scerri 2020; Seacole 1857; Smith 2020; “Mary Seacole (1805-1881)” 2017</p>
             
               <p><strong>Summary:</strong> There continues to be much debate surrounding Seacole’s importance to the history of nursing, and her place in its pedagogy. This debate speaks to the evolving place of nursing as a profession within the broader medical community. It also raises questions of knowledge and power in medicine, highlighting the continued privileging of Eurocentric medical traditions and knowledge as the normative standard of medical practice and care. Questions that are often raised in discussions of Seacole’s place in the history and study of medicine include: what form(s) her medical, nursing, and care work took, her educational background and apparent lack of accredited, formalized training, her use of so-called “folk remedies” and “African medicines,” and her self-described role as a “doctress.” In <em>Wonderful Adventures</em>, Seacole identifies herself as part of a lineage of Jamaican “doctresses,” and describes her mother as keeping “a boarding house in Kingston, and [being], like very many of the Creole women, an admirable doctress.” Seacole’s medical training and practices challenge Victorian, Eurocentric, and colonial definitions of medical knowledge and practice.</p>
@@ -134,7 +134,7 @@
             </section>
 
             <section aria-labelledby="pathway-3">
-              <h4 id="pathway-3">Seacole’s Care Work: Identity, Context, Experience</h4>
+              <h4 id="pathway-3">Seacole’s Care Work: Identity, Context, Practice</h4>
               <p><strong>Recommended Texts (full references below):</strong> Anionwu 2012; Anionwu, Staring, and Staring-Derks 2015; Chang 2017; Howell 2010; Scerri 2020; Seacole 1857; Sleeth 2018; “Mary Seacole (1805-1881)” 2017</p>
 
               <p><strong>Summary:</strong> Many of the conversations surrounding Mary Seacole’s care work are focused on her role as a nurse during the Crimean War, often juxtaposing her with, or subordinating her to, the life and work of Florence Nightingale. These debates raise questions about the nature of Seacole’s care work, both in the Crimean context and beyond it. Seacole’s medical knowledge and care work do not fit within traditional (western, British, colonial) definitions of the scope of a nurse’s knowledge and work, and Seacole herself does not draw a clear distinction between her nursing and her other employments. In her own words, she “gained a reputation as a skilful nurse and doctress,” while also running a hotel and working as a sutler (selling provisions and supplies to the troops). By examining a combination of both Seacole’s <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em> (particularly chapters II, IV, and VI), and a selection of secondary materials, this pathway highlights how considerations of gender, race, and class shaped Seacole’s care work, including what forms and roles that care work took, and how and where she was able to undertake that work.</p>
