--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -59,18 +59,25 @@
 					<section aria-labelledby="introduction">
 						<h3 id="introduction">Introduction</h3>
 
-						<p class="center">Coming Soon!</p>
+						<p>The bibliography integrates the digital humanities projects and primary and seconary materials cited elsewhere on the <em>Undisciplining the Victorian Classroom</em> site. Users are also encouraged to visit our main <a href="https://www.zotero.org/groups/2924315/undisciplining_the_victorian_classroom/library">Zotero library</a>, which provides access to the original database entries on which the bibliography on this page is based.</p>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
 						<h3 id="menu">Menu</h3>
             <ol class="menu">
+							<li><a href="#digital">Digital Humanities Projects</a></li>
 							<li><a href="#primary">Primary Materials</a></li>
 							<li><a href="#secondary">Secondary Materials</a></li>
 							<li><a href="#caption">Tile/Header Image Caption</a></li>
               <li><a href="#citation">Page Citation (MLA)</a></li>
             </ol>
           </section>
+
+					<section aria-labelledby="digital">
+						<h3 id="digital">Digital Humanities Projects</h3>
+
+						<p class="center">Coming Soon!</p>
+					</section>
 
 					<section aria-labelledby="primary">
 						<h3 id="primary">Primary Materials</h3>
