--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -59,7 +59,7 @@
 					<section aria-labelledby="introduction">
 						<h3 id="introduction">Introduction</h3>
 
-						<p>The bibliography integrates the digital humanities projects and primary and seconary materials cited elsewhere on the <em>Undisciplining the Victorian Classroom</em> site. Users are also encouraged to visit our main <a href="https://www.zotero.org/groups/2924315/undisciplining_the_victorian_classroom/library">Zotero library</a>, which provides access to the original database entries on which the bibliography on this page is based.</p>
+						<p>This bibliography integrates the digital humanities projects and primary and seconary materials cited elsewhere on the <em>Undisciplining the Victorian Classroom</em> project site. Users are also encouraged to visit our main <a href="https://www.zotero.org/groups/2924315/undisciplining_the_victorian_classroom/library">Zotero library</a>, which provides access to the original database entries from which the following bibliography derives.</p>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
