update html for image refs

--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -192,7 +192,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Joseph Mallord William Turner. <a href="https://collections.mfa.org/objects/31102">Slave Ship (Slavers Throwing Overboard the Dead and Dying, Typhoon Coming On)</a>. 1840. The Beal Gallery (Gallery 251), 99.22. Public domain.</p>
+						<p>Joseph Mallord William Turner. <a href="https://collections.mfa.org/objects/31102"><em>Slave Ship (Slavers Throwing Overboard the Dead and Dying, Typhoon Coming On)</em></a>. 1840. The Beal Gallery (Gallery 251), 99.22. Public domain.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
