--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -107,7 +107,7 @@
 				<summary aria-labelledby="reading">
 					<h3 id="reading">Further Reading</h3>
 				
-					<p>Aguirre, Robert D. <em>Informal Empire: Mexico and Central American in Victorian Culture</em>. University of Minnesota Press, 2004.</p>
+					<p>Aguirre, Robert D. <em>Informal Empire: Mexico and Central America in Victorian Culture</em>. University of Minnesota Press, 2004.</p>
 
 					<p>Edmundson, William. <em>A History of the British Presence in Chile: From Bloody Mary to Charles Darwin and the Decline of British Influence</em>. Palgrave Macmillan, 2009.</p>
 
