--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					<h2 id="image-details">Carousel Image Details</h2>
 
 						<!-- <h3>Slideshow</h3> -->
-						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>.” Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
+						<p id="kalighat"><em>Slide #1</em>: Anonymous Indian Artist. “<a href="https://clevelandart.org/art/2003.103">Durga Killing the Demon Mahisha</a>.” 1800s. Cleveland Museum of Art, Indian Art, Indian and Southeast Asian Art. CC0 “No Rights Reserved.”</p>
 
 						<p id="markino"><em>Slide #2</em>: Yoshio Markino. “<a href="https://archive.org/details/japaneseartistin00markuoft/page/196/mode/2up">Earl’s Court Station</a>.” <em>A Japanese Artist in London</em>, by Yoshio Markino, Chatto & Windus, 1910, p. 196. Public domain image.</p>
 
