--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="lesson-plan">
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan" class="fit">Southern  Africa, 1820–1930</h2>
-          	<img loading="" style="object-position: 50% 52.5%;" src="/img/lesson_plans/uvc_0019-1800px.jpg" srcset="/img/lesson_plans/uvc_0019-1800px.jpg 1800w, /img/lesson_plans/uvc_0019-1650px.jpg 1650w, /img/lesson_plans/uvc_0019-1500px.jpg 1500w, /img/lesson_plans/uvc_0019-1350px.jpg 1350w, /img/lesson_plans/uvc_0019-1200px.jpg 1200w, /img/lesson_plans/uvc_0019-1050px.jpg 1050w, /img/lesson_plans/uvc_0019-900px.jpg 900w, /img/lesson_plans/uvc_0019-750px.jpg 750w, /img/lesson_plans/uvc_0019-600px.jpg 600w, /img/lesson_plans/uvc_0019-450px.jpg 450w, /img/lesson_plans/uvc_0019-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Printed color map of southern Africa with red lines showing routes of travel." title="Anonymous. Map of Southern Africa. South Africa and How to Reach It by the Castle Line, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain."/>
+          	<img loading="" style="object-position: 50% 52.5%;" src="/img/lesson_plans/uvc_0019-1800px.jpg" srcset="/img/lesson_plans/uvc_0019-1800px.jpg 1800w, /img/lesson_plans/uvc_0019-1650px.jpg 1650w, /img/lesson_plans/uvc_0019-1500px.jpg 1500w, /img/lesson_plans/uvc_0019-1350px.jpg 1350w, /img/lesson_plans/uvc_0019-1200px.jpg 1200w, /img/lesson_plans/uvc_0019-1050px.jpg 1050w, /img/lesson_plans/uvc_0019-900px.jpg 900w, /img/lesson_plans/uvc_0019-750px.jpg 750w, /img/lesson_plans/uvc_0019-600px.jpg 600w, /img/lesson_plans/uvc_0019-450px.jpg 450w, /img/lesson_plans/uvc_0019-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Printed color map of southern Africa with red lines showing routes of travel." title="Map of Southern Africa. South Africa and How to Reach It by the Castle Line, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -191,7 +191,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous. Map of Southern Africa. <em>South Africa and How to Reach It by the Castle Line</em>, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain. In describing southern Africa as “South Africa” when not referring specifically to the Union of South Africa (formed in 1910), the British elided the region’s indigenous territories and (for most of the nineteenth century) Boer republics.</p>
+						<p>Map of Southern Africa. <em>South Africa and How to Reach It by the Castle Line</em>, by Edward P. Mathers, Simpkin, 1889, opp. contents page. Public domain. In describing southern Africa as “South Africa” when not referring specifically to the Union of South Africa (formed in 1910), the British elided the region’s indigenous territories and (for most of the nineteenth century) Boer republics.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
