--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -53,7 +53,7 @@
 
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Mary Seacole and the Caribbean</h2>
-          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0008-900px.jpg" srcset="/img/lesson_plans/uvc_0008-900px.jpg 900w, /img/lesson_plans/uvc_0008-750px.jpg 750w, /img/lesson_plans/uvc_0008-600px.jpg 600w, /img/lesson_plans/uvc_0008-450px.jpg 450w, /img/lesson_plans/uvc_0008-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background." title="Anonymous. Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain. Image courtesy of Monvisions."/>
+          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0008-900px.jpg" srcset="/img/lesson_plans/uvc_0008-900px.jpg 900w, /img/lesson_plans/uvc_0008-750px.jpg 750w, /img/lesson_plans/uvc_0008-600px.jpg 600w, /img/lesson_plans/uvc_0008-450px.jpg 450w, /img/lesson_plans/uvc_0008-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background." title="Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. MonoVisions Black & White Photography Magazine. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 					
@@ -110,7 +110,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Tile/Header Image Caption</h3>
 
-						<p>Anonymous. <a href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/">Kingston from Harbor</a>. 1891. Public domain. Image courtesy of Monvisions.</p>
+						<p><a href="https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/"><em>Kingston from Harbor</em></a>. 1891. MonoVisions Black & White Photography Magazine. Public domain.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
