--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="syllabus">Reintroducing the Victorians</h2>
-          	<img loading="" src="/img/syllabi/uvc_0026-1500px.jpg" srcset="/img/syllabi/uvc_0026-1500px.jpg 1500w, /img/syllabi/uvc_0026-1350px.jpg 1350w, /img/syllabi/uvc_0026-1200px.jpg 1200w, /img/syllabi/uvc_0026-1050px.jpg 1050w, /img/syllabi/uvc_0026-900px.jpg 900w, /img/syllabi/uvc_0026-750px.jpg 750w, /img/syllabi/uvc_0026-600px.jpg 600w, /img/syllabi/uvc_0026-450px.jpg 450w, /img/syllabi/uvc_0026-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Interior scene with a large group of women seated around a table, many looking at documents." title="Anonymous. “In the Ayah’s Home (Hackney).” Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes, edited by G. R. Sims, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12., https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney. Public domain."/>
+          	<img loading="" src="/img/syllabi/uvc_0026-1500px.jpg" srcset="/img/syllabi/uvc_0026-1500px.jpg 1500w, /img/syllabi/uvc_0026-1350px.jpg 1350w, /img/syllabi/uvc_0026-1200px.jpg 1200w, /img/syllabi/uvc_0026-1050px.jpg 1050w, /img/syllabi/uvc_0026-900px.jpg 900w, /img/syllabi/uvc_0026-750px.jpg 750w, /img/syllabi/uvc_0026-600px.jpg 600w, /img/syllabi/uvc_0026-450px.jpg 450w, /img/syllabi/uvc_0026-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Interior scene with a large group of women seated around a table, many looking at documents." title="Sims, G. R., editor. “In the Ayah’s Home (Hackney).” Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12., https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney. Public domain."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -140,7 +140,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous. “<a href="https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney">In the Ayah’s Home (Hackney)</a>.” <em>Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes</em>, edited by G. R. Sims, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12.. Public domain.</p>
+						<p>Sims, G. R., editor. “<a href="https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney">In the Ayah’s Home (Hackney)</a>.” <em>Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes</em>, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12. Public domain.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
