--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -52,7 +52,7 @@
 			<main id="main" aria-labelledby="syllabus">
 					<div class="aspect-ratio-box">
 						<h2 id="syllabus">Unsettling Victorian Literature</h2>
-          	<img loading="" style="object-position: 50% 0%;" src="/img/syllabi/uvc_0029-1500px.jpg" srcset="/img/syllabi/uvc_0029-1500px.jpg 1500w, /img/syllabi/uvc_0029-1350px.jpg 1350w, /img/syllabi/uvc_0029-1200px.jpg 1200w, /img/syllabi/uvc_0029-1050px.jpg 1050w, /img/syllabi/uvc_0029-900px.jpg 900w, /img/syllabi/uvc_0029-750px.jpg 750w, /img/syllabi/uvc_0029-600px.jpg 600w, /img/syllabi/uvc_0029-450px.jpg 450w, /img/syllabi/uvc_0029-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Small body of water with evergreen trees, green hills, and snow-capped mountains in distance." title="Anonymous. The Lions and Brockton Point, Stanley Park. n.d., https://digital.lib.sfu.ca/pfp-22097/msc130-1106701. Simon Frazer University Digitized Collections, MSC130-11067."/>
+          	<img loading="" style="object-position: 50% 0%;" src="/img/syllabi/uvc_0029-1500px.jpg" srcset="/img/syllabi/uvc_0029-1500px.jpg 1500w, /img/syllabi/uvc_0029-1350px.jpg 1350w, /img/syllabi/uvc_0029-1200px.jpg 1200w, /img/syllabi/uvc_0029-1050px.jpg 1050w, /img/syllabi/uvc_0029-900px.jpg 900w, /img/syllabi/uvc_0029-750px.jpg 750w, /img/syllabi/uvc_0029-600px.jpg 600w, /img/syllabi/uvc_0029-450px.jpg 450w, /img/syllabi/uvc_0029-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Small body of water with evergreen trees, green hills, and snow-capped mountains in distance." title="The Lions and Brockton Point, Stanley Park. n.d., https://digital.lib.sfu.ca/pfp-22097/msc130-1106701. Simon Frazer University Digitized Collections, MSC130-11067."/>
 						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
@@ -112,7 +112,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p>Anonymous. <a href="https://digital.lib.sfu.ca/pfp-22097/msc130-1106701">The Lions and Brockton Point, Stanley Park</a>. n.d. Simon Frazer University Digitized Collections, MSC130-11067.</p>
+						<p><a href="https://digital.lib.sfu.ca/pfp-22097/msc130-1106701"><em>The Lions and Brockton Point, Stanley Park</em></a>. n.d. Simon Frazer University Digitized Collections, MSC130-11067.</p>
 					</section>
 					
 					<section class="smaller" aria-labelledby="citation">
