--- a/html/lesson_plans/africa_archival_erasure.html
+++ b/html/lesson_plans/africa_archival_erasure.html
@@ -157,7 +157,7 @@
               
               <p>Smith, Matthew J., and Catherine Hall. <a href="https://www.ucl.ac.uk/lbs/"><em>Legacies of British Slave-Ownership</em></a>. University of College London, Department of History, 2021.</p>
               
-              <p>Wisnicki, Adrian S, dev. <a href="https://onemorevoice.org"><em>One More Voice</em></a> (an imprint of <em>Livingstone Online</em>), new dawn edition, 2021.</p>
+              <p>Wisnicki, Adrian S, dev. <a href="https://onemorevoice.org"><em>One More Voice</em></a> (an imprint of <em>Livingstone Online</em>), new dawn ed., 2021.</p>
             </section>
 
 						<section aria-labelledby="materials-4">
