--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -123,7 +123,7 @@
 
 								<p>Browning, Robert. 1842. “<a href="https://www.poetryfoundation.org/poems/43768/my-last-duchess">My Last Duchess</a>.” <em>Poetry Foundation</em>, n.d.</p>
 
-								<p>Spencer, Anne. “<a href="https://scalar.lehigh.edu/harlemwomen/before-the-feast-at-shushan-poem-by-anne-spencer.2">Before the Feast of Shushan (Version 2)</a>.” 1920. <em>Women of the Early Harlem Renaissance: African American Women Writers 1900-1922</em>, edited by Amardeep Singh, Digital Edition, Lehigh University, 2018.</p>
+								<p>Spencer, Anne. “<a href="https://scalar.lehigh.edu/harlemwomen/before-the-feast-at-shushan-poem-by-anne-spencer.2">Before the Feast of Shushan (Version 2)</a>.” 1920. <em>Women of the Early Harlem Renaissance: African American Women Writers 1900-1922</em>, edited by Amardeep Singh, digital ed., Lehigh University, 2018.</p>
 							</section>
 
 							<section aria-labelledby="secondary-1">
